# Changelog
Alle wesentlichen Änderungen für dieses Projekt werden hier dokumentiert.

Das Format basiert auf link:https://keepachangelog.com/en/1.0.0[Keep a Changelog].

## [UNRELEASED] -- XXXX-XX-XX
* PasswordEncoderExtension entfernen, Passwort schon im Helper verschlüsseln
* Update auf SpringBoot 3.1.0.
* Bei View-Anfragen die Zeit von Instants und LocalDates mit beachten

## [12.61.1] -- 2023-05-12
* Fehler NACH Verarbeiten von XProcedures korrekt zurückgeben
* Autocommit per default auf `false` stellen

## [12.61.0] -- 2023-05-11
* AuthorizationController zu AuthorizationService umbenennen, da es kein Controller ist.

## [12.60.2] -- 2023-05-10
* Update auf SpringBoot 3.0.6.
* KeyText in xtcasUser von 10 auf 50 Zeichen verlängert

## [12.60.1] -- 2023-04-27
* Konfiguration der DataSource SpringBoot überlassen
* Verwaltung der JDBC Connections HikariCP überlassen

## [12.60.0] -- 2023-04-21
* Update auf SpringBoot 3.0.5.
* Korrektur der Connectionfreigabe.
* AuthorizationTest ausbessern (Tabelle leeren, damit andere Tests nicht das Ergebnis beeinflussen)
* `aero_minova_database_` properties entfernen (sind durch `spring.datasource.` abgedeckt)
* Fehlermeldung bei Laden von Privilegien verbessern

## [12.59.1] -- 2023-04-04
* Update auf SpringBoot 3.0.4.

* Feld ModulName in MDI-Maske hinzugefügt.
* Erhöhe Dependency software.amazon.awssdk:bom Version von 2.19.31 auf 2.20.38.
* SQL-Fehlermeldungen ohne Default-Übersetzung verarbeiten
* Connections freigeben nach unsicherem Viewaufruf. Hierdurch soll das Hängenbleiben des CAS verhindert werden.

## [12.59.0] -- 2023-02-07
* #362 Zugriff auf weitere Datenbanken unterstützen (zumindest über Views).
* Property `aero.minova.database.kind` durch `spring.jooq.sql-dialect` ersetzt.
* Proof of Concept Test für SQLViewController#getIndexView
* Kopieren in MDI-Maske ermöglichen, um die Bedienung zu vereinfachen
* Extension-Doku erweitern.